Bug 309148 - Rekonq menu for the menubar plasma applet is not complete and has two Bookmark entries
Summary: Rekonq menu for the menubar plasma applet is not complete and has two Bookmar...
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 2.0
Assignee: Andrea Diamantini
URL:
Keywords:
: 310884 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-28 14:22 UTC by Adria
Modified: 2013-04-25 07:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adria 2012-10-28 14:22:25 UTC
Not all configuration options found in the default configuration button are available when using the menubar plasma applet. 

Reproducible: Always

Steps to Reproduce:
1. Use the menubar plasma applet
Actual Results:  
There are two entries for Bookmarks:
- First one contains the bookmarks
- Second one contains the "Add Bookmark" action
Tools menu offers less options than the Tools menu under the Global configuration button. These options do not exist in the menubar:
- Create Application Web Shortcut
- Sync


Expected Results:  
It would be nice if Rekonq had the same features when using the menubar applet, just like Dolphin does.
Comment 1 Andrea Diamantini 2012-10-30 15:15:11 UTC
Hi Adria,
with latest git snapshot, I think you are referring to rekonq2, isn't it?


2012/10/28 Adria <swiftscythe@gmail.com>

> https://bugs.kde.org/show_bug.cgi?id=309148
>
>             Bug ID: 309148
>           Severity: minor
>            Version: latest git snapshot
>           Priority: NOR
>           Assignee: adjam7@gmail.com
>            Summary: Rekonq menu for the menubar plasma applet is not
>                     complete and has two Bookmark entries
>     Classification: Unclassified
>                 OS: Linux
>           Reporter: swiftscythe@gmail.com
>           Hardware: Archlinux Packages
>             Status: UNCONFIRMED
>          Component: general
>            Product: rekonq
>
> Not all configuration options found in the default configuration button are
> available when using the menubar plasma applet.
>
> Reproducible: Always
>
> Steps to Reproduce:
> 1. Use the menubar plasma applet
> Actual Results:
> There are two entries for Bookmarks:
> - First one contains the bookmarks
> - Second one contains the "Add Bookmark" action
> Tools menu offers less options than the Tools menu under the Global
> configuration button. These options do not exist in the menubar:
> - Create Application Web Shortcut
> - Sync
>
>
> Expected Results:
> It would be nice if Rekonq had the same features when using the menubar
> applet,
> just like Dolphin does.
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
>
Comment 2 Adria 2012-10-30 15:38:00 UTC
(In reply to comment #1)
> Hi Adria,
> with latest git snapshot, I think you are referring to rekonq2, isn't it?
> 
> 
> 2012/10/28 Adria <swiftscythe@gmail.com>
> 
> > https://bugs.kde.org/show_bug.cgi?id=309148
> >
> >             Bug ID: 309148
> >           Severity: minor
> >            Version: latest git snapshot
> >           Priority: NOR
> >           Assignee: adjam7@gmail.com
> >            Summary: Rekonq menu for the menubar plasma applet is not
> >                     complete and has two Bookmark entries
> >     Classification: Unclassified
> >                 OS: Linux
> >           Reporter: swiftscythe@gmail.com
> >           Hardware: Archlinux Packages
> >             Status: UNCONFIRMED
> >          Component: general
> >            Product: rekonq
> >
> > Not all configuration options found in the default configuration button are
> > available when using the menubar plasma applet.
> >
> > Reproducible: Always
> >
> > Steps to Reproduce:
> > 1. Use the menubar plasma applet
> > Actual Results:
> > There are two entries for Bookmarks:
> > - First one contains the bookmarks
> > - Second one contains the "Add Bookmark" action
> > Tools menu offers less options than the Tools menu under the Global
> > configuration button. These options do not exist in the menubar:
> > - Create Application Web Shortcut
> > - Sync
> >
> >
> > Expected Results:
> > It would be nice if Rekonq had the same features when using the menubar
> > applet,
> > just like Dolphin does.
> >
> > --
> > You are receiving this mail because:
> > You are the assignee for the bug.
> >

Hi!
No, I'm referring to latest git cloned from git://anongit.kde.org/rekonq.git
Do you want me to try it with rekonq2 as well?
Comment 3 Andrea Diamantini 2012-10-30 15:55:06 UTC
well. if you could try it I'll be very glad :)

2012/10/30 Adria <swiftscythe@gmail.com>

> https://bugs.kde.org/show_bug.cgi?id=309148
>
> --- Comment #2 from Adria <swiftscythe@gmail.com> ---
> (In reply to comment #1)
> > Hi Adria,
> > with latest git snapshot, I think you are referring to rekonq2, isn't it?
> >
> >
> > 2012/10/28 Adria <swiftscythe@gmail.com>
> >
> > > https://bugs.kde.org/show_bug.cgi?id=309148
> > >
> > >             Bug ID: 309148
> > >           Severity: minor
> > >            Version: latest git snapshot
> > >           Priority: NOR
> > >           Assignee: adjam7@gmail.com
> > >            Summary: Rekonq menu for the menubar plasma applet is not
> > >                     complete and has two Bookmark entries
> > >     Classification: Unclassified
> > >                 OS: Linux
> > >           Reporter: swiftscythe@gmail.com
> > >           Hardware: Archlinux Packages
> > >             Status: UNCONFIRMED
> > >          Component: general
> > >            Product: rekonq
> > >
> > > Not all configuration options found in the default configuration
> button are
> > > available when using the menubar plasma applet.
> > >
> > > Reproducible: Always
> > >
> > > Steps to Reproduce:
> > > 1. Use the menubar plasma applet
> > > Actual Results:
> > > There are two entries for Bookmarks:
> > > - First one contains the bookmarks
> > > - Second one contains the "Add Bookmark" action
> > > Tools menu offers less options than the Tools menu under the Global
> > > configuration button. These options do not exist in the menubar:
> > > - Create Application Web Shortcut
> > > - Sync
> > >
> > >
> > > Expected Results:
> > > It would be nice if Rekonq had the same features when using the menubar
> > > applet,
> > > just like Dolphin does.
> > >
> > > --
> > > You are receiving this mail because:
> > > You are the assignee for the bug.
> > >
>
> Hi!
> No, I'm referring to latest git cloned from git://
> anongit.kde.org/rekonq.git
> Do you want me to try it with rekonq2 as well?
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
>
Comment 4 Adria 2012-10-30 17:00:22 UTC
Hello again! 
I've built rekonq 2 and realised it has no support for the menubar at all. Is it how you want it to be?
Comment 5 Andrea Diamantini 2012-11-01 09:18:55 UTC
Well... rekonq has no menubar since 0.0.x... the menubar applet is built
around... (?), so I probably think you should open this bug against it. I
never wrote 1 line of code to support (or unsupport) it in any way.
I just tried to improve my ui.rc file as usual, with all the info about
this hypothetical menubar we don't have.

2012/10/30 Adria <swiftscythe@gmail.com>

> https://bugs.kde.org/show_bug.cgi?id=309148
>
> --- Comment #4 from Adria <swiftscythe@gmail.com> ---
> Hello again!
> I've built rekonq 2 and realised it has no support for the menubar at all.
> Is
> it how you want it to be?
>
> --
> You are receiving this mail because:
> You are the assignee for the bug.
>
Comment 6 Adria 2012-11-01 19:58:53 UTC
Well, the appmenu plasma widget uses DBUS to get the menu from the focused app, so if it doesn't provide a menu, it doesn't show anything.
Here you can see the menu shown with rekonq 1.x:
http://kde-apps.org/CONTENT/content-pre2/154324-2.png
And with rekonq 2.x nothing is displayed.

I know rekonq is not supposed to display a menubar, because it clutters the interface, but I think it would be nice to provide one that would be shown over dbus.
All other KDE apps show their menubar in the widget (even if their menu is optional, like dolphin)

I don't know if I made my point clear... Seeing the results on rekonq2, this should be a WISH instead of a BUG REPORT :P

Thanks for your understanding.
Comment 7 J. Jordan 2012-12-27 02:40:55 UTC
rekong 1.80 on KDE 4.9.95 from Kubuntu repos:

Menu gone, no way to get to them. deleted menu toolbar-button long ago.  Even if this is an intentional interface design change it is still a bug as it makes rekonq nearly useless. Please put the menus back.
Comment 8 Jekyll Wu 2013-01-01 06:35:12 UTC
*** Bug 310884 has been marked as a duplicate of this bug. ***
Comment 9 Andrea Diamantini 2013-01-03 17:17:01 UTC
Git commit 60de94ebf8dd94aa165f095ea92a851819328c23 by Andrea Diamantini.
Committed on 03/01/2013 at 18:11.
Pushed by adjam into branch 'kded-appmenu-support'.

Add kded-appmenu support, first attempt

To test this:
$ git clone git://anongit.kde.org/rekonq
$ cd rekonq
$ git checkout kded-appmenu-support
$ mkdir build
$ cd build
$ cmake..
$ make
and see... Please, help me to test this if you wanna support for this

M  +11   -1    src/tabwindow/tabwindow.cpp
M  +6    -0    src/tabwindow/tabwindow.h
M  +26   -1    src/webwindow/rekonqfactory.cpp
M  +2    -2    src/webwindow/rekonqui.rc

http://commits.kde.org/rekonq/60de94ebf8dd94aa165f095ea92a851819328c23
Comment 10 Adria 2013-01-03 20:15:17 UTC
Hi! Thank you very much!

I've tested the new branch, but menus are not displayed. Do you want me to provide some debug information?

Adrià
Comment 11 Andrea Diamantini 2013-01-08 15:30:37 UTC
debug? Did it crash?
Comment 12 Adria 2013-01-08 18:32:20 UTC
I've built with DebugFull and launched in from a terminal, but it doesn't crash nor tells much about the menu.
$ rekonq 
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
QDBusConnection: session D-Bus connection created before QCoreApplication. Application may misbehave.
libpng warning: Duplicate iCCP chunk
rekonq(3602)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:
Comment 13 Andrea Diamantini 2013-04-25 07:02:26 UTC
Git commit 072490b92b33bd37672e4ac34d3b7df0705c84ae by Andrea Diamantini.
Committed on 25/04/2013 at 08:59.
Pushed by adjam into branch 'master'.

appmenu-qt support :)

M  +6    -0    src/tabwindow/rekonqwindow.cpp
M  +42   -0    src/webwindow/rekonqfactory.cpp
M  +36   -30   src/webwindow/rekonqui.rc
M  +14   -0    src/webwindow/webwindow.cpp

http://commits.kde.org/rekonq/072490b92b33bd37672e4ac34d3b7df0705c84ae
Comment 14 Adria 2013-04-25 07:35:11 UTC
Thanks! :D