appmenu-qt support :)

BUG: 309148